# openapi.json
@@ -1,6 +1,10 @@
 {
   "openapi": "3.0.2",
-  "info": { "title": "FastAPI", "version": "0.1.0" },
+  "info": {
+    "title": "Mapt",
+    "description": "Shape file uploader/sharing application",
+    "version": "0.1.0"
+  },
   "paths": {
     "/layers/": {
       "get": {
@@ -21,10 +25,68 @@
           }
         }
       }
+    },
+    "/datasets/shapes/": {
+      "post": {
+        "summary": "Upload Shape",
+        "description": "Upload a new shape file",
+        "operationId": "upload_shape_datasets_shapes__post",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/Body_upload_shape_datasets_shapes__post"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/ShapeUploaded" }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/HTTPValidationError" }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
+      "Body_upload_shape_datasets_shapes__post": {
+        "title": "Body_upload_shape_datasets_shapes__post",
+        "required": ["shape_file"],
+        "type": "object",
+        "properties": {
+          "shape_file": {
+            "title": "Shape File",
+            "type": "string",
+            "format": "binary"
+          }
+        }
+      },
+      "HTTPValidationError": {
+        "title": "HTTPValidationError",
+        "type": "object",
+        "properties": {
+          "detail": {
+            "title": "Detail",
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/ValidationError" }
+          }
+        }
+      },
       "Layer": {
         "title": "Layer",
         "required": ["id", "label", "group"],
@@ -33,6 +95,29 @@
           "id": { "title": "Id", "type": "integer" },
           "label": { "title": "Label", "type": "string" },
           "group": { "title": "Group", "type": "string" }
+        }
+      },
+      "ShapeUploaded": {
+        "title": "ShapeUploaded",
+        "required": ["dataset_href", "file_size"],
+        "type": "object",
+        "properties": {
+          "dataset_href": { "title": "Dataset Href", "type": "string" },
+          "file_size": { "title": "File Size", "type": "number" }
+        }
+      },
+      "ValidationError": {
+        "title": "ValidationError",
+        "required": ["loc", "msg", "type"],
+        "type": "object",
+        "properties": {
+          "loc": {
+            "title": "Location",
+            "type": "array",
+            "items": { "type": "string" }
+          },
+          "msg": { "title": "Message", "type": "string" },
+          "type": { "title": "Error Type", "type": "string" }
         }
       }
     }
